tests/NormalTests/paczka1/fuzzy1/52726179.err
Error in line 1: epJ S702 34,7
Error in line 5: Hb9wn A294 33,2
Error in line 8: Hb9wn A736 23,4
Error in line 12: epJ A736 98,1
Error in line 27: trhH3 A294 35,5
